--- a/sehir.html
+++ b/sehir.html
@@ -257,7 +257,6 @@ function showResult(isCorrect) {
 function copyShare() {
   const score = finalScore?.textContent?.trim() || "0";
 
-  // Sayfa yolunu küçük harf yapıp kontrol et
   const pathname = window.location.pathname.toLowerCase();
   let gameTitle = "YÜDÜ: Genel Oyun";
 
@@ -267,10 +266,8 @@ function copyShare() {
     gameTitle = "YÜDÜ: Şehir Tahmini";
   }
 
-  // Sabit ana URL - kendi projenin URL'sini buraya yaz
   const mainUrl = "https://yu-du.vercel.app";
 
-  // Paylaşım metni
   const shareText = `${gameTitle} oyununda ${score} puan yaptım! Sen de dene: ${mainUrl}`;
 
   const isMobile = /Mobi|Android/i.test(navigator.userAgent);
@@ -279,7 +276,7 @@ function copyShare() {
     navigator.share({
       title: gameTitle,
       text: shareText,
-      url: mainUrl
+      // url: mainUrl  // Burayı kaldırdık, URL zaten text içinde var
     }).catch(() => {
       fallbackCopyToClipboard(shareText);
     });
