--- a/ulke.html
+++ b/ulke.html
@@ -64,7 +64,7 @@
 
 <script>
 async function fetchCities() {
-  const response = await fetch("https://restcountries.com/v3.1/independent?status=true&fields=translations,flags,population,area");
+  const response = await fetch("datasets/ulke.json");
 
   if (!response.ok) {
     throw new Error('API isteği başarısız oldu');
