--- a/film.html
+++ b/film.html
@@ -86,7 +86,7 @@ async function fetchFilms() {
 
 async function initData() {
   try {
-    items = await fetchCities();
+    items = await fetchFilms();
     console.log('API verisi başarıyla yüklendi', items);
   } catch (e) {
     console.error(e);
@@ -208,14 +208,14 @@ async function initData() {
       currentPair = getRandomPair();
 
 document.getElementById('item1Text').textContent = currentPair[0].name;
-document.getElementById('item1Flag').src = currentPair[0].flag;
-document.getElementById('item1Flag').alt = currentPair[0].name + " bayrağı";
+document.getElementById('item1Flag').src = currentPair[0].image;
+document.getElementById('item1Flag').alt = currentPair[0].name + " posteri";
 
 item1Value.textContent = currentPair[0].value.toLocaleString();
 
 document.getElementById('item2Text').textContent = currentPair[1].name;
-document.getElementById('item2Flag').src = currentPair[1].flag;
-document.getElementById('item2Flag').alt = currentPair[1].name + " bayrağı";
+document.getElementById('item2Flag').src = currentPair[1].image;
+document.getElementById('item2Flag').alt = currentPair[1].name + " posteri";
 
 item2Value.textContent = '?';
 
