--- a/film.html
+++ b/film.html
@@ -279,7 +279,7 @@ function copyShare() {
   const score = finalScore?.textContent?.trim() || "0";
 
   const pathname = window.location.pathname.toLowerCase();
-  let gameTitle = "YÜDÜ: Genel Oyun";
+  let gameTitle = "YÜDÜ: Film Oyun";
 
   if (pathname.includes("Film")) {
     gameTitle = "YÜDÜ: Film Tahmini";
