--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1>YÜDÜ - Yüksek mi, Düşük mü?</h1>
 <a href="ulke.html">🌍 Ülke Oyunu <span id="bestUlke" style="color:white; font-size:0.9rem;"></span></a>
 <a href="sehir.html">🏙️ Şehir Oyunu <span id="bestSehir" style="color:white; font-size:0.9rem;"></span></a>
-<a href="film.html">🏙️ Film Oyunu <span id="bestFilm" style="color:white; font-size:0.9rem;"></span></a>
+<a href="film.html">🎬 Film Oyunu <span id="bestFilm" style="color:white; font-size:0.9rem;"></span></a>
 
 <script>
 
@@ -42,9 +42,11 @@
 function showBestScores() {
   const bestUlke = localStorage.getItem('highScoreUlke') || 0;
   const bestSehir = localStorage.getItem('highScoreSehir') || 0;
+  const bestFilm = localStorage.getItem('highScoreFilm') || 0;
 
   document.getElementById('bestUlke').textContent = bestUlke > 0 ? `(En iyi: ${bestUlke})` : '';
   document.getElementById('bestSehir').textContent = bestSehir > 0 ? `(En iyi: ${bestSehir})` : '';
+  document.getElementById('bestFilm').textContent = bestFim > 0 ? `(En iyi: ${bestFilm})` : '';
 }
 
 showBestScores();
