--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   <button class="theme-toggle" id="toggleThemeBtn" aria-label="Tema değiştir">🌙</button>
   <h1>YÜDÜ - Yüksek mi, Düşük mü?</h1>
-<a href="ulke.html">🌍 Ülke Oyunu <span id="bestUlke" style="color:white; font-size:0.9rem;"></span></a>
-<a href="sehir.html">🏙️ Şehir Oyunu <span id="bestSehir" style="color:white; font-size:0.9rem;"></span></a>
-<a href="film.html">🎬 Film Oyunu <span id="bestFilm" style="color:white; font-size:0.9rem;"></span></a>
+  <a href="ulke.html">🌍 Ülke Oyunu <span id="bestUlke" style="color:white; font-size:0.9rem;"></span></a><br />
+  <a href="sehir.html">🏙️ Şehir Oyunu <span id="bestSehir" style="color:white; font-size:0.9rem;"></span></a><br />
+  <a href="film.html">🎬 Film Oyunu <span id="bestFilm" style="color:white; font-size:0.9rem;"></span></a>
 
 <script>
 
@@ -37,8 +37,9 @@
       darkMode = !darkMode;
       applyTheme();
     });
-	
+    
     applyTheme();
+
 function showBestScores() {
   const bestUlke = localStorage.getItem('highScoreUlke') || 0;
   const bestSehir = localStorage.getItem('highScoreSehir') || 0;
@@ -46,7 +47,7 @@ function showBestScores() {
 
   document.getElementById('bestUlke').textContent = bestUlke > 0 ? `(En iyi: ${bestUlke})` : '';
   document.getElementById('bestSehir').textContent = bestSehir > 0 ? `(En iyi: ${bestSehir})` : '';
-  document.getElementById('bestFilm').textContent = bestFim > 0 ? `(En iyi: ${bestFilm})` : '';
+  document.getElementById('bestFilm').textContent = bestFilm > 0 ? `(En iyi: ${bestFilm})` : '';
 }
 
 showBestScores();
