--- a/tarih.html
+++ b/tarih.html
@@ -65,7 +65,7 @@
 
 <script>
 async function fetchTarihs() {
-  const response = await fetch("datasets/Tarih.json");
+  const response = await fetch("datasets/tarih.json");
 
   if (!response.ok) {
     throw new Error('Tarih verisi yüklenemedi');
