--- a/tarih.html
+++ b/tarih.html
@@ -28,6 +28,7 @@
       <div id="item1Name" class="item-name">
         <img id="item1Poster" src="" alt="Tarih posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item1Text">...</span>
+        <p id="item1description">...</p>
       </div>
       <div id="item1Value" class="value">?</div>
     </div>
@@ -45,6 +46,7 @@
       <div id="item2Name" class="item-name">
         <img id="item2Poster" src="" alt="Tarih posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item2Text">...</span>
+        <p id="item2description">...</p>
       </div>
       <div id="item2Value" class="value hidden">?</div>
     </div>
@@ -74,6 +76,7 @@ async function fetchTarihs() {
   const data = await response.json();
   return data.map(event => ({
     name: event.title,
+    description: event.description,
     value: parseInt(event.value),
     poster: event.image || ""
   }));
@@ -103,9 +106,11 @@ let darkMode = localStorage.getItem('darkMode') === 'true';
 const card1 = document.getElementById('card1');
 const card2 = document.getElementById('card2');
 const item1Text = document.getElementById('item1Text');
+const item1description = document.getElementById('item1description');
 const item1Poster = document.getElementById('item1Poster');
 const item1Value = document.getElementById('item1Value');
 const item2Text = document.getElementById('item2Text');
+const item2description = document.getElementById('item2description');
 const item2Poster = document.getElementById('item2Poster');
 const item2Value = document.getElementById('item2Value');
 const scoreText = document.getElementById('scoreText');
@@ -202,11 +207,13 @@ function nextRound() {
   currentPair = getRandomPair();
 
   item1Text.textContent = currentPair[0].name;
+  item1description.textContent = currentPair[0].description;
   item1Poster.src = currentPair[0].poster;
   item1Poster.alt = currentPair[0].name + " posteri";
   item1Value.textContent = currentPair[0].value.toFixed(0);
 
   item2Text.textContent = currentPair[1].name;
+  item2description.textContent = currentPair[1].description;
   item2Poster.src = currentPair[1].poster;
   item2Poster.alt = currentPair[1].name + " posteri";
   item2Value.textContent = '?';
