--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <a href="sehir.html">🏙️ Şehir Oyunu <span id="bestSehir" style="color:white; font-size:0.9rem;"></span></a><br />
   <a href="film.html">🎬 Film Oyunu <span id="bestFilm" style="color:white; font-size:0.9rem;"></span></a><br />
   <a href="tarih.html">🕰️ Tarihi Olaylar <span id="bestTarih" style="color:white; font-size:0.9rem;"></span></a><br />
-  <a href="futbol.html">⚽ Futbol <span id="bestFutbol" style="color:white; font-size:0.9rem;"></span></a>
+  <a href="futbol.html">⚽ Futbol <span id="bestFutbol" style="color:white; font-size:0.9rem;"></span></a><br />
+  <a href="isim.html">🌟 İsim <span id="bestIsim" style="color:white; font-size:0.9rem;"></span></a>
 
 <script>
 
@@ -48,12 +49,14 @@ function showBestScores() {
   const bestFilm = localStorage.getItem('highScoreFilm') || 0;
   const bestTarih = localStorage.getItem('highScoreTarih') || 0;
   const bestFutbol = localStorage.getItem('highScoreFutbol') || 0;
+  const bestIsim = localStorage.getItem('highScoreIsim') || 0;
 
   document.getElementById('bestUlke').textContent = bestUlke > 0 ? `(En iyi: ${bestUlke})` : '';
   document.getElementById('bestSehir').textContent = bestSehir > 0 ? `(En iyi: ${bestSehir})` : '';
   document.getElementById('bestFilm').textContent = bestFilm > 0 ? `(En iyi: ${bestFilm})` : '';
   document.getElementById('bestTarih').textContent = bestTarih > 0 ? `(En iyi: ${bestTarih})` : '';
   document.getElementById('bestFutbol').textContent = bestFutbol > 0 ? `(En iyi: ${bestFutbol})` : '';
+  document.getElementById('bestIsim').textContent = bestIsim > 0 ? `(En iyi: ${bestIsim})` : '';
 }
 
 showBestScores();
