--- a/isim.html
+++ b/isim.html
@@ -26,7 +26,7 @@
 
     <div class="card" id="card1" aria-label="Birinci İsim" style="display:none;">
       <div id="item1Name" class="item-name">
-        <!--<img id="item1Poster" src="" alt="İsim posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">-->
+        <img id="item1Poster" src="" alt="İsim posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item1Text">...</span>
         <p id="item1description">...</p>
       </div>
@@ -44,7 +44,7 @@
 
     <div class="card" id="card2" aria-label="İkinci İsim" style="display:none;">
       <div id="item2Name" class="item-name">
-        <!--<img id="item2Poster" src="" alt="İsim posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">-->
+        <img id="item2Poster" src="" alt="İsim posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item2Text">...</span>
         <p id="item2description">...</p>
       </div>
