--- a/isim.html
+++ b/isim.html
@@ -77,7 +77,7 @@ async function fetchIsims() {
   return data.map(event => ({
     name: event.title,
     description: event.description,
-    value: Number(event.value.replace(/\./g, "")),
+    value: parseInt(event.value),
     poster: event.image || ""
   }));
 }
@@ -210,9 +210,7 @@ function nextRound() {
   item1description.textContent = currentPair[0].description;
   item1Poster.src = currentPair[0].poster;
   item1Poster.alt = currentPair[0].name + " posteri";
-  const numValue = Number(currentPair[0].value.replace(/\./g, ""));
-  item1Value.textContent = numValue.toLocaleString("tr-TR");
-
+  item1Value.textContent = currentPair[0].value.toFixed(1);
 
   item2Text.textContent = currentPair[1].name;
   item2description.textContent = currentPair[1].description;
