--- a/tarih.html
+++ b/tarih.html
@@ -26,7 +26,7 @@
 
     <div class="card" id="card1" aria-label="Birinci Tarih" style="display:none;">
       <div id="item1Name" class="item-name">
-        <img id="item1Poster" src="" alt="Tarih posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
+        <img id="item1Poster" src="" alt="Tarih posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item1Text">...</span>
       </div>
       <p id="item1description">...</p>
@@ -44,7 +44,7 @@
 
     <div class="card" id="card2" aria-label="İkinci Tarih" style="display:none;">
       <div id="item2Name" class="item-name">
-        <img id="item2Poster" src="" alt="Tarih posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
+        <img id="item2Poster" src="" alt="Tarih posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item2Text">...</span>
       </div>
       <p id="item2description">...</p>
