--- a/ulke.html
+++ b/ulke.html
@@ -22,11 +22,12 @@
       Zaman sınırlıdır, doğru tahmin etmeye çalış!
     </div>
 
-    <div class="card" id="card1" aria-label="Birinci öğe" style="display:none;">
-<div id="item1Name" class="item-name">
-  <img id="item1Flag" src="" alt="Bayrak" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
-  <span id="item1Text">...</span>
-</div>
+    <div class="card" id="card1" aria-label="Birinci Tarih" style="display:none;">
+      <div id="item1Name" class="item-name">
+        <img id="item1Poster" src="" alt="Tarih posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px; margin-right:8px;">
+        <span id="item1Text">...</span>
+      </div>
+      <p id="item1description">...</p>
       <div id="item1Value" class="value">?</div>
     </div>
 
@@ -39,11 +40,12 @@
       <button id="btnLower" onclick="checkGuess('lower')" disabled>Daha Düşük</button>
     </div>
 
-    <div class="card" id="card2" aria-label="İkinci öğe" style="display:none;">
-<div id="item2Name" class="item-name">
-  <img id="item2Flag" src="" alt="Bayrak" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
-  <span id="item2Text">...</span>
-</div>
+    <div class="card" id="card2" aria-label="İkinci Tarih" style="display:none;">
+      <div id="item2Name" class="item-name">
+        <img id="item2Poster" src="" alt="Tarih posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px; margin-right:8px;">
+        <span id="item2Text">...</span>
+      </div>
+      <p id="item2description">...</p>
       <div id="item2Value" class="value hidden">?</div>
     </div>
 
