--- a/film.html
+++ b/film.html
@@ -24,11 +24,12 @@
       Zaman sınırlıdır, doğru tahmin etmeye çalış!
     </div>
 
-    <div class="card" id="card1" aria-label="Birinci film" style="display:none;">
+    <div class="card" id="card1" aria-label="Birinci Tarih" style="display:none;">
       <div id="item1Name" class="item-name">
-        <img id="item1Poster" src="" alt="Film posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
+        <img id="item1Poster" src="" alt="Tarih posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item1Text">...</span>
       </div>
+      <p id="item1description">...</p>
       <div id="item1Value" class="value">?</div>
     </div>
 
@@ -41,11 +42,12 @@
       <button id="btnLower" onclick="checkGuess('lower')" disabled>Daha Düşük</button>
     </div>
 
-    <div class="card" id="card2" aria-label="İkinci film" style="display:none;">
+    <div class="card" id="card2" aria-label="İkinci Tarih" style="display:none;">
       <div id="item2Name" class="item-name">
-        <img id="item2Poster" src="" alt="Film posteri" style="width:40px; height:auto; vertical-align:middle; border-radius:4px; margin-right:8px;">
+        <img id="item2Poster" src="" alt="Tarih posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item2Text">...</span>
       </div>
+      <p id="item2description">...</p>
       <div id="item2Value" class="value hidden">?</div>
     </div>
 
