--- a/futbol.html
+++ b/futbol.html
@@ -24,9 +24,9 @@
       Zaman sınırlıdır, doğru tahmin etmeye çalış!
     </div>
 
-    <div class="card" id="card1" aria-label="Birinci Tarih" style="display:none;">
+    <div class="card" id="card1" aria-label="Birinci " style="display:none;">
+        <img id="item1Poster" src="" alt=" posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px;">
       <div id="item1Name" class="item-name">
-        <img id="item1Poster" src="" alt="Tarih posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item1Text">...</span>
       </div>
       <p id="item1description">...</p>
@@ -42,9 +42,9 @@
       <button id="btnLower" onclick="checkGuess('lower')" disabled>Daha Düşük</button>
     </div>
 
-    <div class="card" id="card2" aria-label="İkinci Tarih" style="display:none;">
+    <div class="card" id="card2" aria-label="İkinci " style="display:none;">
+        <img id="item2Poster" src="" alt=" posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px;">
       <div id="item2Name" class="item-name">
-        <img id="item2Poster" src="" alt="Tarih posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px; margin-right:8px;">
         <span id="item2Text">...</span>
       </div>
       <p id="item2description">...</p>
