--- a/sehir.html
+++ b/sehir.html
@@ -22,8 +22,12 @@
       Zaman sınırlıdır, doğru tahmin etmeye çalış!
     </div>
 
-    <div class="card" id="card1" aria-label="Birinci öğe" style="display:none;">
-      <div id="item1Name">...</div>
+    <div class="card" id="card1" aria-label="Birinci " style="display:none;">
+        <img id="item1Poster" src="" alt=" posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px;">
+      <div id="item1Name" class="item-name">
+        <span id="item1Text">...</span>
+      </div>
+      <p id="item1description">...</p>
       <div id="item1Value" class="value">?</div>
     </div>
 
@@ -36,8 +40,12 @@
       <button id="btnLower" onclick="checkGuess('lower')" disabled>Daha Düşük</button>
     </div>
 
-    <div class="card" id="card2" aria-label="İkinci öğe" style="display:none;">
-      <div id="item2Name">...</div>
+    <div class="card" id="card2" aria-label="İkinci " style="display:none;">
+        <img id="item2Poster" src="" alt=" posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px;">
+      <div id="item2Name" class="item-name">
+        <span id="item2Text">...</span>
+      </div>
+      <p id="item2description">...</p>
       <div id="item2Value" class="value hidden">?</div>
     </div>
 
