--- a/futbol.html
+++ b/futbol.html
@@ -58,6 +58,7 @@
     <button id="btnStart" class="btn-secondary" onclick="startGame()">Oyuna Başla</button>
 
     <div id="gameOver" role="alert" style="display:none;">
+	<h2>YÜDÜ - Yüksek mi Düşük mü?</h2>
       <p>Oyun Bitti! Toplam Skorun: <strong id="finalScore">0</strong></p>
       <button class="btn-secondary" id="btnRestart" onclick="startGame()">Yeniden Başla</button>
       <button class="btn-secondary" id="btnShare" onclick="copyShare()">Skorunu Paylaş</button>
