--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 <body>
   <button class="theme-toggle" id="toggleThemeBtn" aria-label="Tema değiştir">🌙</button>
   <h1>YÜDÜ - Yüksek mi, Düşük mü?</h1>
+<div class="menu-kategorı">
   <a href="ulke.html">🌍 Ülke Oyunu <span id="bestUlke" style="color:white; font-size:0.9rem;"></span></a><br />
   <a href="sehir.html">🏙️ Şehir Oyunu <span id="bestSehir" style="color:white; font-size:0.9rem;"></span></a><br />
   <a href="film.html">🎬 Film Oyunu <span id="bestFilm" style="color:white; font-size:0.9rem;"></span></a><br />
   <a href="tarih.html">🕰️ Tarihi Olaylar <span id="bestTarih" style="color:white; font-size:0.9rem;"></span></a><br />
   <a href="futbol.html">⚽ Futbol <span id="bestFutbol" style="color:white; font-size:0.9rem;"></span></a><br />
   <a href="isim.html">🌟 İsim <span id="bestIsim" style="color:white; font-size:0.9rem;"></span></a>
-
+</div>
 <script>
 
     let darkMode = localStorage.getItem('darkMode') === 'true';
