--- a/sehir.html
+++ b/sehir.html
@@ -9,6 +9,16 @@
 <link rel="icon" href="assets/icon-192.png">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-263H1JRSEK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-263H1JRSEK');
+</script>
+  
 <title>YÜDÜ - Şehir Yüksek mi Düşük mü?</title>
 
 </head>
