--- a/tarih.html
+++ b/tarih.html
@@ -5,10 +5,19 @@
 <meta name="theme-color" content="#ffcd21">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="style.css" />
-<link rel="manifest" href="manifest.json" />
-<link rel="icon" href="assets/icon-192.png" />
-<meta name="mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="assets/icon-192.png">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-263H1JRSEK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-263H1JRSEK');
+</script>
   
 <title>YÜDÜ - Tarih Yüksek mi Düşük mü?</title>
   
