--- a/sehir.html
+++ b/sehir.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="card" id="card1" aria-label="Birinci " style="display:none;">
-        <img id="item1Poster" src="" alt=" posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px;">
+        <img id="item1Poster" src="" alt=" posteri" style="display:none; width:auto; height:40px; vertical-align:middle; border-radius:4px;">
       <div id="item1Name" class="item-name">
         <span id="item1Text">...</span>
       </div>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="card" id="card2" aria-label="İkinci " style="display:none;">
-        <img id="item2Poster" src="" alt=" posteri" style="width:auto; height:40px; vertical-align:middle; border-radius:4px;">
+        <img id="item2Poster" src="" alt=" posteri" style="display:none; width:auto; height:40px; vertical-align:middle; border-radius:4px;">
       <div id="item2Name" class="item-name">
         <span id="item2Text">...</span>
       </div>
